# pei-nwdaf-template

./: Dockerfile  Jenkinsfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: jenkins.yml
