[project]
name = "data-storage"
version = "0.1.0"
description = ""
authors = [{name = "GOAT", email = "goat@ua.pt"}]
license = {text = "MIT"}
requires-python = ">=3.11"
dependencies = [
    "fastapi==0.121.3",
    "pydantic==2.12.4",
    "python-dotenv==1.2.1",
    "uvicorn==0.34.0",
    "kafka-python==2.0.2",
    "bandit==1.8.0",
    "safety==2.3.5",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
